# nextup_karaoke

./: .gitignore  LICENSE  README.md  render.yaml
backend/: .env.example  main.py  models.py  pyproject.toml  requirements.txt  session.py  ws_manager.py
backend/routes/: parties.py  queue.py  search.py  users.py
docs/: DEPLOYMENT.md
docs/superpowers/plans/: 2026-06-20-favorites.md
docs/superpowers/specs/: 2026-06-20-favorites-design.md
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/display/: DisplayView.tsx  QueueSidebar.tsx  YouTubePlayer.tsx
frontend/src/components/mobile/: FavoritesPage.tsx  GuestPickerModal.tsx  JoinPage.tsx  LandingPage.tsx  QueuePage.tsx  SearchPage.tsx  UserPage.tsx
frontend/src/components/shared/: AppAnnouncementsModal.tsx  NavBar.tsx  UserProfileForm.tsx
frontend/src/context/: FavoritesContext.tsx  QueueContext.tsx  UserContext.tsx
frontend/src/hooks/: useWebSocket.ts
