[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "redis[asyncio]>=7.4.0",
    "uvicorn[standard]>=0.47.0",
    "websockets>=16.0",
    "youtube-search==2.2.0",
    "httpx>=0.27.0",
]
